--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/main-favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/main-favicon.png" />
+    <link rel="apple-touch-icon" href="/main-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Credit Jambo Ltd - Savings Management System</title>
+    <script>
+      // Apply colors immediately to prevent flash of incorrect colors
+      (function() {
+        try {
+          const storedColors = localStorage.getItem('systemColors');
+          if (storedColors) {
+            const colors = JSON.parse(storedColors);
+            const root = document.documentElement;
+            root.style.setProperty('--primary-color', colors.primaryColor || '#00b050');
+            root.style.setProperty('--secondary-color', colors.secondaryColor || '#008238');
+            root.style.setProperty('--accent-color', colors.accentColor || '#6bc96b');
+            root.style.setProperty('--success-color', colors.successColor || '#00b050');
+            root.style.setProperty('--warning-color', colors.warningColor || '#f59e0b');
+            root.style.setProperty('--error-color', colors.errorColor || '#ef4444');
+          }
+        } catch (error) {
+          console.warn('Failed to apply stored colors:', error);
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
